# pl-ergonomics

./: README.md  pyproject.toml
src/pl_ergonomics/: afk.py  ergonomics.py  ergonomics_key_values.py
src/pl_ergonomics/testing/: set_up.py
tests/: afk_test.py  conftest.py  constants.py  ergonomics_test.py  placeholder_test.py
